Completed Car Insurance

--- a/CarInsurance/CarInsurance/Views/Admin/Index.cshtml
+++ b/CarInsurance/CarInsurance/Views/Admin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CarInsurance.Models.Insuree>
+﻿@model List<CarInsurance.ViewModels.InsureeVm>
 
 @{
     ViewBag.Title = "Index";
@@ -12,37 +12,16 @@
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
+            First Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LastName)
+            Last Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EmailAddress)
+            Email Address
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.DateOfBirth)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CarYear)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CarMake)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CarModel)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DUI)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.SpeedingTickets)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CoverageType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Quote)
+            Quote
         </th>
         <th></th>
     </tr>
@@ -57,27 +36,6 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.EmailAddress)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateOfBirth)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CarYear)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CarMake)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CarModel)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DUI)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.SpeedingTickets)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CoverageType)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Quote)
